--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -64,16 +64,41 @@
         "dark": "Dark",
         "system": "System"
     },
+    "profile": {
+        "welcome": "Welcome to Goal Mate!",
+        "completionMessage": "Let's complete your profile to get started",
+        "fullName": "Full Name",
+        "fullNameHint": "Enter your full name",
+        "phoneNumber": "Phone Number",
+        "phoneNumberHint": "Enter your phone number (optional)",
+        "completeProfile": "Complete Profile",
+        "skipForNow": "Skip for now"
+    },
     "errors": {
         "networkError": "Network error. Please check your connection.",
         "serverError": "Server error. Please try again later.",
         "unknownError": "An unknown error occurred",
-        "authFailed": "Authentication failed",
-        "userNotFound": "User not found",
-        "emailAlreadyInUse": "Email is already in use",
-        "weakPassword": "Password is too weak",
-        "invalidEmail": "Invalid email address",
-        "userDisabled": "User account has been disabled",
-        "tooManyRequests": "Too many requests. Please try again later"
+        "timeoutError": "Request timed out. Please try again.",
+        "permissionDenied": "Permission denied. Please try again.",
+        "invalidCredentials": "Invalid email or password. Please check your credentials.",
+        "userNotFound": "No account found with this email address.",
+        "wrongPassword": "Incorrect password. Please try again.",
+        "emailAlreadyInUse": "An account with this email already exists.",
+        "invalidEmail": "Please enter a valid email address.",
+        "weakPassword": "Password is too weak. Please choose a stronger password.",
+        "userDisabled": "This account has been disabled. Please contact support.",
+        "tooManyRequests": "Too many failed attempts. Please try again later.",
+        "operationNotAllowed": "This sign-in method is not allowed.",
+        "requiresRecentLogin": "Please sign in again to continue.",
+        "accountExistsWithDifferentCredential": "An account already exists with this email using a different sign-in method.",
+        "invalidVerificationCode": "Invalid verification code. Please try again.",
+        "invalidVerificationId": "Invalid verification ID. Please request a new code.",
+        "credentialAlreadyInUse": "This credential is already associated with another account.",
+        "invalidPhoneNumber": "Please enter a valid phone number.",
+        "missingPhoneNumber": "Phone number is required.",
+        "quotaExceeded": "SMS quota exceeded. Please try again later.",
+        "invalidUserToken": "Your session has expired. Please sign in again.",
+        "userTokenExpired": "Your session has expired. Please sign in again.",
+        "invalidApiKey": "Configuration error. Please contact support."
     }
 }
